--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.8.1",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
