--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@clerk/types": "^4.33.0",
     "@internationalized/date": "^3.5.6",
     "@nextui-org/react": "^2.4.8",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "file-loader": "^6.2.0",
+    "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
     "mongodb-client-encryption": "^6.1.0",
     "mongoose": "^8.8.1",
@@ -32,9 +36,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "shadcn-ui": "^0.9.3",
     "svix": "^1.41.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
