--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@internationalized/date": "^3.5.6",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
@@ -23,6 +24,8 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "file-loader": "^6.2.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
