--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.3",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
