logo and name changes

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_AUDIO_PATH=/audio
 APP_URL=http://localhost:3000
-
+APP_NAME=SoundScape
 
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXB0LWJvYXItODguY2xlcmsuYWNjb3VudHMuZGV2JA
