--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "mongodb": "^6.10.0",
     "mongodb-client-encryption": "^6.1.0",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
+    "music-metadata": "^7.12.2",
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.3",
@@ -63,6 +65,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
