usememo and callback added

--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@ CLOUDINARY_API_KEY=158364571269794
 CLOUDINARY_API_SECRET=eiJ41Zbq2KTBIg0rJDr_vRv8ZBM
 CLOUDINARY_URL=cloudinary://158364571269794:eiJ41Zbq2KTBIg0rJDr_vRv8ZBM@dfm6prn5y
 NEXT_PUBLIC_UPLOAD_PRESET=upload_images
+
+
+RECORDS_PER_PAGE= 5
