--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.62.7",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
+    "@wavesurfer/react": "^1.0.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -65,6 +66,7 @@
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "wavesurfer.js": "^7.8.11",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
