--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "shadcn-ui": "^0.9.3",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "wavesurfer.js": "^7.8.11",
     "zod": "^3.23.8",
