--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@clerk/nextjs": "^6.3.3",
     "@clerk/types": "^4.33.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@internationalized/date": "^3.5.6",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
+    "@mui/styled-engine-sc": "^6.2.0",
+    "@mui/x-data-grid": "^7.23.3",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.3.0",
@@ -62,6 +69,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "shadcn-ui": "^0.9.3",
+    "styled-components": "^6.1.13",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
