--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@internationalized/date": "^3.5.6",
-    "@mui/icons-material": "^6.2.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.2.0",
     "@mui/styled-engine-sc": "^6.2.0",
     "@mui/x-data-grid": "^7.23.3",
@@ -73,6 +73,7 @@
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "wavesurfer.js": "^7.8.13",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
