--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "@wavesurfer/react": "^1.0.7",
+    "audio-decode": "^2.2.2",
+    "audio-lena": "^2.3.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -53,6 +56,7 @@
     "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.3",
+    "node-fetch": "^3.3.2",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -63,6 +67,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "rxjs": "^7.8.1",
     "shadcn-ui": "^0.9.3",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
