--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
-      },
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.3.3",
     "@clerk/types": "^4.33.0",
@@ -47,6 +47,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "file-loader": "^6.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
     "mongodb-client-encryption": "^6.1.0",
