--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "description": "music-app",
   "main": "index.js",
