--- a/.env
+++ b/.env
@@ -20,4 +20,12 @@ CLOUDINARY_URL=cloudinary://158364571269794:eiJ41Zbq2KTBIg0rJDr_vRv8ZBM@dfm6prn5
 NEXT_PUBLIC_UPLOAD_PRESET=upload_images
 
 
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyC9GoSwXxhawuoCnz_q4MvXhU7H31Wg68g"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="music-app-cd5ac.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="music-app-cd5ac"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="music-app-cd5ac.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="155592578591"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:155592578591:web:1ae4e72fbf18a23e0ca72a"
+
+
 RECORDS_PER_PAGE= 5
