--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "file-loader": "^6.2.0",
+    "firebase": "^11.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
