--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="music-app-cd5ac"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="music-app-cd5ac.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="155592578591"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:155592578591:web:1ae4e72fbf18a23e0ca72a"
-
+FIREBASE_SERVICE_ACCOUNT_KEY=''
 
 RECORDS_PER_PAGE= 5
