--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "watch" : "tsc --noEmit --watch"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.3",
