--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "fluent-ffmpeg": "^2.1.3",
+    "framer-motion": "^11.17.0",
     "git-filter-repo": "^0.0.30",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
