--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint:fix": "next lint --fix",
     "watch": "tsc --noEmit --watch"
   },
+    "engines": {
+      "node": "23.x"
+    },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
