node versioning added for build

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "installCommand": "npm install --legacy-peer-deps"
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "scripts": {
+    "install": "npm install --legacy-peer-deps"
   }
-  
+}
