--- a/package.json
+++ b/package.json
@@ -3,121 +3,93 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev || true",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "watch": "tsc --noEmit --watch"
-  },
-  "engines": {
-    "node": "16.x"
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.3.3",
+    "@clerk/types": "^4.33.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@internationalized/date": "^3.5.6",
-    "@mui/icons-material": "^6.3.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
-    "@mui/styled-engine-sc": "^6.2.0",
-    "@mui/x-data-grid": "^7.23.3",
-    "@nextui-org/react": "^2.6.11",
+    "@mui/x-data-grid": "^7.23.6",
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
-    "@tanstack/react-query": "^5.62.7",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
-    "@wavesurfer/react": "^1.0.7",
     "audio-decode": "^2.2.2",
-    "audio-lena": "^2.3.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "debounce": "^2.2.0",
+    "cmdk": "^1.0.4",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "file-loader": "^6.2.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
-    "fluent-ffmpeg": "^2.1.3",
-    "framer-motion": "^11.17.0",
-    "git-filter-repo": "^0.0.30",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
     "mongodb-client-encryption": "^6.1.0",
-    "mongoose": "^8.8.1",
-    "multer": "^1.4.5-lts.1",
-    "music-metadata": "^7.14.0",
-    "next": "^14.0.0",
+    "mongoose": "^8.9.4",
+    "music-metadata": "^10.6.5",
+    "next": "^15.0.3",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.3",
-    "node-audio-peaks": "^4.0.2",
-    "node-fetch": "^3.3.2",
     "query-string": "^9.1.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-day-picker": "^9.5.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "rxjs": "^7.8.1",
     "shadcn-ui": "^0.9.3",
-    "sharp": "^0.33.5",
-    "styled-components": "^6.1.13",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
-    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "wavesurfer.js": "^7.8.11",
+    "wavesurfer.js": "^7.8.16",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/formidable": "^3.4.5",
     "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^15.0.3",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.1",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "typescript": "^5"
   },
   "description": "music-app",
   "main": "index.js",
