--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.3.3",
     "@clerk/types": "^4.33.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@internationalized/date": "^3.5.6",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
@@ -70,6 +71,7 @@
     "shadcn-ui": "^0.9.3",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "wavesurfer.js": "^7.8.16",
     "zod": "^3.23.8",
