--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint:fix": "next lint --fix"
   },
   "engines": {
-  "node": "20.x"
-},
+    "node": "20.x"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.3.3",
     "@clerk/types": "^4.33.0",
@@ -52,6 +52,7 @@
     "file-loader": "^6.2.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.10.0",
     "mongodb-client-encryption": "^6.1.0",
