--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGODB_URI=mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+MONGODB_URI=MONGODB_URI=mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=music-app
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXB0LWJvYXItODguY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_Q5OuRIJIGMl9Gmn981X4KqS9psrtKtfdI1CP94fWm0
