--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^39.3.0",
     "wavesurfer.js": "^7.8.16",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
