--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/Signup
 NEXT_PUBLIC_AUDIO_PATH=/audio
 APP_URL=http://localhost:3000
 APP_NAME=SoundScape
-
+NODE_ENV=production
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXB0LWJvYXItODguY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_Q5OuRIJIGMl9Gmn981X4KqS9psrtKtfdI1CP94fWm0
