--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,20 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "production"
-      }
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
     },
-    "installCommand": "npm install --legacy-peer-deps",
-    "ignore": [
-    "node_modules/large-package/",
-    "unused-assets/",
-    "docs/"
+    "commands": {
+      "install": "npm install --legacy-peer-deps",   
+      "build": "npm run build",                      
+      "dev": "npm run dev",                          
+      "prod": "npm run prod"                   
+    }
+  },
+  "installCommand": "npm install --legacy-peer-deps",  
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
+    }
   ]
-  }
-  
+}
