--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# .env.prod (Production Environment)
+# .env.local (Development Environment)
 PORT=3000
 
 # MongoDB
-MONGODB_URI='mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0'
+MONGODB_URI="mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0" 
 DB_NAME="music-app"
 
 # Clerk Authentication
@@ -30,12 +30,12 @@ NEXT_PUBLIC_UPLOAD_PRESET="upload_images"
 
 # Misc
 RECORDS_PER_PAGE=5
-APP_URL="https://musicmatter-rosy.vercel.app"
+APP_URL="http://localhost:3000"
 APP_NAME="SoundScape"
-NODE_ENV="production"
+NODE_ENV="development"
 SIGNING_SECRET="whsec_KUsEmw8R/lh6rzbJkCH3jHZGQiFCgkud"
 
-# Firebase Admin SDK (for production)
+# Firebase Admin SDK (for local development)
 TYPE="service_account"
 PROJECT_ID="music-app-cd5ac"
 PRIVATE_KEY_ID="3b8d6848381564bffdadd264e6155cc9dda9213f"
