--- a/.env.local
+++ b/.env.local
@@ -15,7 +15,7 @@ NEXT_PUBLIC_AUDIO_PATH="/audio"
 
 # Firebase Configuration
 NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyC9GoSwXxhawuoCnz_q4MvXhU7H31Wg68g"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="music-app-cd5ac.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="https://music-oovw30718-akankshapatel315s-projects.vercel.app"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="music-app-cd5ac"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="music-app-cd5ac.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="155592578591"
