--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# .env.local (Development Environment)
+# .env.prod (Production Environment)
 PORT=3000
 
 # MongoDB
-MONGODB_URI="mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0" 
+MONGODB_URI='mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0'
 DB_NAME="music-app"
 
 # Clerk Authentication
@@ -15,7 +15,7 @@ NEXT_PUBLIC_AUDIO_PATH="/audio"
 
 # Firebase Configuration
 NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyC9GoSwXxhawuoCnz_q4MvXhU7H31Wg68g"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="https://music-oovw30718-akankshapatel315s-projects.vercel.app"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="music-app-cd5ac.firebaseapp.com"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="music-app-cd5ac"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="music-app-cd5ac.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="155592578591"
@@ -30,12 +30,12 @@ NEXT_PUBLIC_UPLOAD_PRESET="upload_images"
 
 # Misc
 RECORDS_PER_PAGE=5
-APP_URL="http://localhost:3000"
+APP_URL="https://musicmatter-rosy.vercel.app"
 APP_NAME="SoundScape"
-NODE_ENV="development"
+NODE_ENV="production"
 SIGNING_SECRET="whsec_KUsEmw8R/lh6rzbJkCH3jHZGQiFCgkud"
 
-# Firebase Admin SDK (for local development)
+# Firebase Admin SDK (for production)
 TYPE="service_account"
 PROJECT_ID="music-app-cd5ac"
 PRIVATE_KEY_ID="3b8d6848381564bffdadd264e6155cc9dda9213f"
