--- a/.env.local
+++ b/.env.local
@@ -30,7 +30,7 @@ NEXT_PUBLIC_UPLOAD_PRESET="upload_images"
 
 # Misc
 RECORDS_PER_PAGE=5
-APP_URL="http://localhost:3000"
+APP_URL="https://music-1p2nwgdx6-akankshapatel315s-projects.vercel.app"
 APP_NAME="SoundScape"
 NODE_ENV="development"
 SIGNING_SECRET="whsec_KUsEmw8R/lh6rzbJkCH3jHZGQiFCgkud"
