--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "dotenv-cli": "^8.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.3",
+    "i": "^0.3.7",
+    "npm": "^11.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   },
