--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # .env.local (Development Environment)
 PORT=3000
-APP_URL="https://music-app-zeta-navy.vercel.app"
+APP_URL="https://music-app-sepia-rho.vercel.app"
 # MongoDB
 MONGODB_URI="mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-app?retryWrites=true&w=majority&appName=Cluster0" 
 DB_NAME="music-app"
