--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,8 @@
 # .env.prod (Production Environment)
 PORT=3000
-APP_URL="music-app-eight-gamma.vercel.app"
+APP_URL="https://music-app-eight-gamma.vercel.app"
+
+
 
 # MongoDB
 MONGODB_URI="mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0"
