--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,30 +17,26 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "baseUrl": ".", 
+    "paths": {
+      "@app/*": ["app/*"],
+      "@redux/*": ["redux/*"],
+      "@utils/*": ["utils/*"],
+      "@/*": ["./*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "baseUrl": "."
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "node_modules/@types/react/index.d.ts",
     ".next/types/**/*.ts",
     "types.d.ts",
-    "src/app/music/[slug]",
-    "eslint.config.js",
-    "app/Pricing/index.tsx"
+    "eslint.config.js"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
