--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 # .env.prod (Production Environment)
 PORT=3000
-APP_URL="https://music-app-eight-gamma.vercel.app"
+APP_URL="https://music-app-chi-lovat.vercel.app"
+
 
 
 
