--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "redux": "^5.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar": "^3.1.0",
+    "vercel": "^39.3.0",
     "wavesurfer.js": "^7.8.16",
     "zustand": "^5.0.1"
   },
