--- a/.env.prod
+++ b/.env.prod
@@ -2,11 +2,8 @@
 PORT=3000
 APP_URL="https://music-app-chi-lovat.vercel.app"
 
-
-
-
 # MongoDB
-MONGODB_URI="mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI='mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0'
 DB_NAME="music-app"
 
 # Clerk Authentication
