--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Created by Vercel CLI
 APP_NAME="SoundScape"
-APP_URL="https://music-app-smoky-gamma.vercel.app"
+APP_URL="https://music-app-liart.vercel.app"
 CLERK_SECRET_KEY="sk_test_Q5OuRIJIGMl9Gmn981X4KqS9psrtKtfdI1CP94fWm0"
 CLIENT_EMAIL="firebase-adminsdk-gjhw0@music-app-cd5ac.iam.gserviceaccount.com"
 CLIENT_ID="110279518193829816466"
