--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-data-grid": "^7.23.6",
-    "@netlify/plugin-nextjs": "^5.9.3",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -41,6 +40,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/mongoose": "^5.11.96",
     "audio-decode": "^2.2.2",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -59,6 +59,7 @@
     "next": "^15.1.5",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.3",
+    "postcss": "^8.5.1",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.0",
@@ -83,7 +84,7 @@
     "eslint-config-next": "^15.0.3",
     "i": "^0.3.7",
     "npm": "^11.0.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
   "description": "music-app",
