--- a/.env.prod
+++ b/.env.prod
@@ -1,11 +1,9 @@
 # .env.prod (Production Environment)
 PORT=3000
-APP_URL="https://music-matterr.netlify.app"
-
+APP_URL="https://music-matter.vercel.app"
 # MongoDB
 MONGODB_URI='mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0'
 DB_NAME="music-app"
-
 # Clerk Authentication
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_YXB0LWJvYXItODguY2xlcmsuYWNjb3VudHMuYGV2JA"
 CLERK_SECRET_KEY="sk_test_Q5OuRIJIGMl9Gmn981X4KqS9psrtKtfdI1CP94fWm0"
