--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 # .env.prod (Production Environment)
 PORT=5000
-APP_URL="https://music-matter.vercel.app"
+APP_URL="https://music-app-red-pi.vercel.app"
 # MongoDB
 MONGODB_URI='mongodb+srv://akanksha:root@cluster0.ent1u.mongodb.net/music-matter?retryWrites=true&w=majority&appName=Cluster0'
 DB_NAME="music-app"
