--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroui/date-picker": "^2.3.10",
+    "@heroui/input": "^2.4.10",
+    "@heroui/navbar": "^2.2.9",
+    "@heroui/react": "^2.6.14",
+    "@heroui/system": "^2.4.7",
+    "@heroui/theme": "^2.4.6",
     "@internationalized/date": "^3.5.6",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-data-grid": "^7.23.6",
+    "@nextui-org/input": "^2.4.8",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.3",
